Update gradle for task 2

--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,10 @@ dependencies {
 }
 
 test {
-    useTestNG()
+    useTestNG(){
+        includeGroups "Addition", "Subtraction"
+    }
+
     testLogging {
         events "passed", "skipped", "failed"
     }
